Make API responses more consistent
This implements the changes that were announced in XTools 3.19

Make EC month counts be grouped by YYYY-MM
