# config/packages/nelmio_api_doc.yaml
@@ -233,12 +233,18 @@ nelmio_api_doc:
                             example: Metallica
                         namespace:
                             $ref: '#/components/schemas/Namespace'
+                        project:
+                            type: string
+                            example: en.wikipedia.org
+                        username:
+                            type: string
+                            example: Jimbo Wales
                         rev_id:
                             type: integer
                             example: 123
                         timestamp:
                             type: date-time
-                            example: 20200101125959
+                            example: '2020-01-01T12:59:59Z'
                         minor:
                             type: boolean
                             example: 0
@@ -296,7 +302,7 @@ nelmio_api_doc:
                             timestamp:
                                 type: date-time
                                 description: Timestamp of the initial revision
-                                example: 20200101125959
+                                example: '2020-01-01T12:59:59'
                             rev_id:
                                 type: integer
                                 description: Revision ID (correlates to `archive.ar_rev_id` for deleted pages)
